<resources>
    <string name="app_name">Taller Progra</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="button_backdoor">Back Door</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation">ADMIN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Hints para formulario de crear jugador -->
    <string name="form_user"> Usuario </string>
    <string name="form_password"> Clave </string>
    <string name="form_name"> Nombre </string>
    <string name="form_last_name1"> Apellido paterno </string>
    <string name="form_last_name2"> Apellido materno </string>
    <string name="form_ci"> C.I. </string>
    <string name="form_country"> Pais </string>
    <string name="form_genre"> Género </string>
    <string name="form_user_type"> Tipo de usuario </string>
    <string name="form_register_button"> Registrar </string>

    <!-- Hints para Grand Slam de crear jugador -->
    <string name="form_title_gs"> Crear Grand Slam </string>
    <!-- Torneos -->
    <string name="form_gb"> Gran Bretaña </string>
    <string name="form_usa"> Estados Unidos </string>
    <string name="form_francia"> Francia </string>
    <string name="form_australia"> Australia </string>

    <!-- Torneos -->
    <string name="form_campeon"> Campeón </string>
    <string name="form_final"> Final </string>
    <string name="form_semifinal"> Semifinal </string>
    <string name="form_cuartos"> Cuartos de final </string>
    <string name="form_octavos"> Octavos de final </string>
    <string name="form_clasificatoria"> Fase clasificatoria </string>

    <string name="form_year"> Año </string>
    <string name="form_create_gs"> CREAR </string>

    <!-- Hints para registrar  Partido -->
    <string name="form_title_match"> Registrar Partido</string>
    <string name="form_team_a"> Grupo A </string>
    <string name="form_team_b"> Grupo B </string>
    <string name="form_result_a"> Resultado A </string>
    <string name="form_result_b"> Resultado B </string>
    <string name="form_place"> Lugar de encuentro </string>
    <string name="form_team_referee"> Grupo Arbitros </string>
    <string name="form_modality"> Modalidad </string>
    <string name="form_torneo"> Torneo </string>
    <string name="form_fase"> Fase </string>

</resources>
